# track

./: .env  .gitignore  Cargo.toml  lc_tracking.db
.crush/: crush.db-shm  crush.db-wal
migrations/: 20250812203452_create_progress_tables.sql
src/: db.rs  main.rs  problem_attempts.rs  problem_bank.rs  problem_bank_populator.rs  problems.rs
static/: grind-75.json
static/scripts/: get_lc_id.sh
